--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore gems
+/vendor
+
 /public/packs
 /public/packs-test
 /node_modules
